<resources>
    <string name="app_name">Movie DB</string>
    <string name="popular_movie">Popular Movie</string>
    <string name="popular_tv">Popular TV</string>
    <string name="popular_people">Popular people</string>
    <string name="now_playing_movie">Now Playing Movie</string>
    <string name="your_likes">Your Likes</string>
    <string name="settings">Settings</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title">title</string>
    <string name="revenue">Revenue: </string>
    <string name="budget">Budget: </string>
    <string name="release_date">Release date</string>
    <string name="status">Status</string>
    <string name="vote">Vote</string>
    
    <string name="advertisement">Your ad could be here №%1$s!</string>

    <string name="retry">Retry</string>
    <string name="bad_internet_connection">Bad internet connection!</string>
    <string name="sorry_your_device_didn_t_connected_to_internet">Sorry, your device didn\'t connected to internet</string>
    <string name="something_wrong">Something wrong...</string>
    <string name="your_advertisement_could_be_here">Your advertisement could be here!</string>

    <string name="settings_about_likes">Do you want to be notified when you like something?</string>
    <string name="settings_about_update">Do you want to be notified when movies are updated?</string>

    <string name="notification_about_updates_list">A little notification!</string>
    <string name="message_notification_about_update">List of movie, tv or people update right now!</string>

    <string name="notification_about_likes">You like something!</string>
    <string name="message_about_your_likes">You like %1$s!</string>
    <string name="watch_now_tv_link">Watch now</string>
    <string name="settings_change_theme">Do you want to change theme?</string>
</resources>